[package]
name = "ian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] } 
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
anyhow = "1.0.56"
bcrypt = "0.12.1"